[project]
name = "backend"
version = "0.1.0"
description = "hrtbeat is an uptime and availability monitoring service"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.8",
    "httpx>=0.28.1",
    "phonenumbers>=9.0.27",
    "sqlalchemy>=2.0.48",
    "uvicorn>=0.39.0",
]
